[package]
name = "developer_joyofenergy_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "joi"
path = "src/main.rs"

[dependencies]
axum = "0.7.7"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
time = { version = "0.3.37", features = ["macros", "serde-human-readable", "serde-well-known"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
serde_json = "1.0"
